# bitly-shortener-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: consts.rs  main.rs
